--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,7 +1,10 @@
 {
   "dependencies": {
-    "com.unity.cinemachine": "2.8.3",
+    "com.cysharp.unitask": "https://github.com/Cysharp/UniTask.git?path=src/UniTask/Assets/Plugins/UniTask",
+    "com.unity.burst": "1.6.3",
+    "com.unity.cinemachine": "2.8.4",
     "com.unity.collab-proxy": "1.15.7",
+    "com.unity.collections": "1.1.0",
     "com.unity.feature.development": "1.0.1",
     "com.unity.ide.rider": "3.0.7",
     "com.unity.ide.visualstudio": "2.0.12",
