--- a/UTools-UnityProject/Packages/manifest.json
+++ b/UTools-UnityProject/Packages/manifest.json
@@ -1,12 +1,14 @@
 {
   "dependencies": {
     "com.cysharp.unitask": "https://github.com/Cysharp/UniTask.git?path=src/UniTask/Assets/Plugins/UniTask",
+    "com.unity.addressables": "1.21.2",
     "com.unity.ai.navigation": "1.1.1",
     "com.unity.burst": "1.7.4",
     "com.unity.cinemachine": "2.9.4",
     "com.unity.collab-proxy": "1.17.7",
     "com.unity.collections": "1.2.4",
     "com.unity.feature.development": "1.0.1",
+    "com.unity.ide.rider": "3.0.17",
     "com.unity.ide.visualstudio": "2.0.17",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.inputsystem": "1.4.4",
