--- a/UTools-UnityProject/Packages/manifest.json
+++ b/UTools-UnityProject/Packages/manifest.json
@@ -1,24 +1,24 @@
 {
   "dependencies": {
     "com.cysharp.unitask": "https://github.com/Cysharp/UniTask.git?path=src/UniTask/Assets/Plugins/UniTask",
-    "com.unity.addressables": "1.21.17",
-    "com.unity.ai.navigation": "1.1.4",
-    "com.unity.burst": "1.8.8",
-    "com.unity.cinemachine": "2.9.5",
-    "com.unity.collab-proxy": "2.1.0",
-    "com.unity.collections": "1.2.4",
+    "com.unity.addressables": "2.0.8",
+    "com.unity.ai.navigation": "2.0.0",
+    "com.unity.burst": "1.8.12",
+    "com.unity.cinemachine": "3.0.1",
+    "com.unity.collab-proxy": "2.2.0",
+    "com.unity.collections": "2.4.0-pre.2",
     "com.unity.feature.development": "1.0.2",
-    "com.unity.ide.rider": "3.0.24",
-    "com.unity.ide.visualstudio": "2.0.18",
-    "com.unity.ide.vscode": "1.2.5",
-    "com.unity.inputsystem": "1.7.0",
-    "com.unity.probuilder": "5.0.7",
-    "com.unity.render-pipelines.universal": "15.0.6",
-    "com.unity.test-framework": "1.3.9",
-    "com.unity.textmeshpro": "3.0.6",
-    "com.unity.timeline": "1.8.2",
-    "com.unity.ugui": "1.0.0",
-    "com.unity.visualscripting": "1.8.0",
+    "com.unity.ide.rider": "3.0.28",
+    "com.unity.ide.visualstudio": "2.0.22",
+    "com.unity.inputsystem": "1.8.0-pre.2",
+    "com.unity.mathematics": "1.3.2",
+    "com.unity.probuilder": "6.0.1-pre.1",
+    "com.unity.render-pipelines.universal": "17.0.2",
+    "com.unity.test-framework": "1.4.3",
+    "com.unity.timeline": "1.8.6",
+    "com.unity.ugui": "2.0.0",
+    "com.unity.visualscripting": "1.9.2",
+    "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
