--- a/UTools-UnityProject/Packages/manifest.json
+++ b/UTools-UnityProject/Packages/manifest.json
@@ -1,23 +1,24 @@
 {
   "dependencies": {
     "com.cysharp.unitask": "https://github.com/Cysharp/UniTask.git?path=src/UniTask/Assets/Plugins/UniTask",
-    "com.unity.addressables": "2.0.8",
-    "com.unity.ai.navigation": "2.0.0",
-    "com.unity.burst": "1.8.12",
-    "com.unity.cinemachine": "3.0.1",
-    "com.unity.collab-proxy": "2.2.0",
-    "com.unity.collections": "2.4.0-pre.2",
+    "com.unity.addressables": "2.6.0",
+    "com.unity.ai.navigation": "2.0.8",
+    "com.unity.burst": "1.8.23",
+    "com.unity.cinemachine": "3.1.4",
+    "com.unity.collab-proxy": "2.8.2",
+    "com.unity.collections": "2.5.7",
     "com.unity.feature.development": "1.0.2",
-    "com.unity.ide.rider": "3.0.28",
-    "com.unity.ide.visualstudio": "2.0.22",
-    "com.unity.inputsystem": "1.8.0-pre.2",
+    "com.unity.ide.rider": "3.0.36",
+    "com.unity.ide.visualstudio": "2.0.23",
+    "com.unity.inputsystem": "1.14.0",
     "com.unity.mathematics": "1.3.2",
-    "com.unity.probuilder": "6.0.1-pre.1",
-    "com.unity.render-pipelines.universal": "17.0.2",
-    "com.unity.test-framework": "1.4.3",
-    "com.unity.timeline": "1.8.6",
+    "com.unity.multiplayer.center": "1.0.0",
+    "com.unity.probuilder": "6.0.5",
+    "com.unity.render-pipelines.universal": "17.2.0",
+    "com.unity.test-framework": "1.5.1",
+    "com.unity.timeline": "1.8.8",
     "com.unity.ugui": "2.0.0",
-    "com.unity.visualscripting": "1.9.2",
+    "com.unity.visualscripting": "1.9.8",
     "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
