--- a/UTools-UnityProject/Packages/manifest.json
+++ b/UTools-UnityProject/Packages/manifest.json
@@ -11,6 +11,7 @@
     "com.unity.ide.rider": "3.0.36",
     "com.unity.ide.visualstudio": "2.0.23",
     "com.unity.inputsystem": "1.14.0",
+    "com.unity.localization": "1.5.5",
     "com.unity.mathematics": "1.3.2",
     "com.unity.multiplayer.center": "1.0.0",
     "com.unity.probuilder": "6.0.5",
