--- a/UTools-UnityProject/Packages/manifest.json
+++ b/UTools-UnityProject/Packages/manifest.json
@@ -7,6 +7,7 @@
     "com.unity.cinemachine": "3.1.4",
     "com.unity.collab-proxy": "2.8.2",
     "com.unity.collections": "2.5.7",
+    "com.unity.entities": "1.3.14",
     "com.unity.feature.development": "1.0.2",
     "com.unity.ide.rider": "3.0.36",
     "com.unity.ide.visualstudio": "2.0.23",
